--- a/cw-project/package.json
+++ b/cw-project/package.json
@@ -12,6 +12,8 @@
     "framer-motion": "^9.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
+    "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
